# Pytest_parametrized_tests

./: .gitignore  pyproject.toml
tests/: config.py  github_sign_in_fixtures.py  test_github_sign_in_indirect.py  test_github_sign_in_parametrize.py
